buildscript {
    repositories {
        mavenCentral()
    }
}

plugins {
    id 'java'
    id 'idea'
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
    testImplementation {
        exclude group: 'junit', module: 'junit'
    }
}


ext {
    lombokVersion = "1.18.20"
}

description = "Java Learning and KB project "

compileJava {
    sourceCompatibility = JavaVersion.VERSION_16
    targetCompatibility = JavaVersion.VERSION_16
    options.encoding = 'UTF-8' //to ensure that I always use UTF-8 in project
}

compileTestJava {
    sourceCompatibility = JavaVersion.VERSION_16
    targetCompatibility = JavaVersion.VERSION_16
    options.encoding = 'UTF-8' //to ensure that I always use UTF-8 in project
}


jar {
    archiveBaseName = project.name
    archiveVersion = '' // removed as i do not use version
}


// ./gradlew dependencyCheckAnalyze

dependencies {
    implementation 'commons-io:commons-io:2.10.0'
    implementation 'ch.qos.logback:logback-classic:1.2.3'
    implementation 'org.simplejavamail:simple-java-mail:5.5.1' //TODO update
    implementation 'io.rest-assured:rest-assured:4.4.0' //normally should be testCompile
    implementation 'io.rest-assured:json-schema-validator:4.4.0' //normally should be testCompile
    implementation 'org.projectlombok:lombok:1.18.20'
    implementation 'org.apache.kafka:kafka-clients:2.8.0'
    annotationProcessor 'org.projectlombok:lombok:1.18.20'
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.2'
    testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.7.2'
    testImplementation 'org.junit.jupiter:junit-jupiter-params:5.7.2'
    testImplementation group: 'org.junit.platform', name: 'junit-platform-launcher', version: '1.7.2'
    testImplementation 'org.hamcrest:hamcrest-all:1.3'
    testImplementation 'org.mockito:mockito-core:3.11.1'
    testImplementation 'org.mockito:mockito-junit-jupiter:3.11.1'
    testImplementation 'org.assertj:assertj-core:3.20.0'
    testImplementation 'com.github.stefanbirkner:system-rules:1.19.0' //junit rules for system package
}

test {
    useJUnitPlatform()
}